--- a/index.css
+++ b/index.css
@@ -11,13 +11,7 @@ body {
 	background-color: #fff;
 	border-width: 0px;
 	box-sizing: border-box;
-
-	display: flex;
-	flex-grow: 0;
-	flex-basis: 900px;
-	flex-direction: column;
-	align-items: center;
-	width: 100%;
+	min-width: 800px;
 }
  
 a {
@@ -30,20 +24,35 @@ a:hover {
 	text-decoration: none;
 }
 
-.head {
-	width: 900px;
-	height: 200px;
+header {
+	margin-top: 15px;
+	width: 100%;
+	height: 140px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+header .top_bar {
+	width: 90%;
+	height: 50%;
 	background-color: yellow;
 }
 
+header .navigation {
+	width: 90%;
+	height: 50%;
+	background-color: #617143;
+}
+
 .body {
-	width: 900px;
+	width: 100%;
 	height: 1000px;
 	background-color: red;
 }
 
-.foot {
-	width: 900px;
-	height: 200px;
+footer {
+	width: 100%;
+	height: 140px;
 	background-color: black;
 }
