--- a/index.css
+++ b/index.css
@@ -3,19 +3,17 @@ html {
 	height: 100%;
 }
 
-body {
+* {
 	font-size: 16px;
 	font-family: "Gothic A1", sans-serif;
 	font-weight: 400;
 	margin: 0;
-	background-color: #fff;
 	border-width: 0px;
 	box-sizing: border-box;
-	min-width: 800px;
 }
- 
+
 a {
-	color: #000000;
+	color: #974343;
 	text-decoration: none;
 	cursor: pointer;
 }
@@ -24,35 +22,26 @@ a:hover {
 	text-decoration: none;
 }
 
+body {
+	background-color: #fff;
+	width: 1000px;
+	margin: 10px auto;
+}
+
 header {
-	margin-top: 15px;
 	width: 100%;
-	height: 140px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-}
-
-header .top_bar {
-	width: 90%;
-	height: 50%;
-	background-color: yellow;
-}
-
-header .navigation {
-	width: 90%;
-	height: 50%;
-	background-color: #617143;
+	height: 120px;
+	background-color: #E7AB9A;
 }
 
 .body {
 	width: 100%;
-	height: 1000px;
-	background-color: red;
+	height: 800px;
+	background-color: #DF7857;
 }
 
 footer {
 	width: 100%;
-	height: 140px;
-	background-color: black;
+	height: 120px;
+	background-color: #617143;
 }
